<resources>
    <string name="app_name">IoT BLE</string>

    <string name="screen_title_main">Device List</string>
    <string name="screen_title_menu">Demo List</string>

    <string name="bluetooth_scanning">Bluetooth Scanning</string>
    <string name="scan_filter_unpaired">Filter unpaired micro:bits from scan results?</string>
    <string name="bluetooth_services">Bluetooth Services on micro:bit</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_services">Bluetooth Services</string>
    <string name="menu_refresh">Refresh Services</string>
    <string name="menu_profile">Bluetooth Profile</string>

    <string name="service_generic_access">Generic Access Service</string>
    <string name="service_generic_attribute">Generic Attribute Service</string>
    <string name="service_device_information">Device Information Service</string>
    <string name="service_accelerometer">Accelerometer Service</string>
    <string name="service_magnetometer">Magnetometer Service</string>
    <string name="service_button">Button Service</string>
    <string name="service_io_pin">IO Pin Service</string>
    <string name="service_led">LED Service</string>
    <string name="service_event">Event Service</string>
    <string name="service_dfu_control">DFU Control Service</string>
    <string name="service_temperature">Temperature Service</string>
    <string name="service_uart">UART Service</string>
    <string name="services_key">Key</string>

    <string name="screen_title_UART">UART</string>
    <string name="screen_title_device_information">Device Information</string>

    <string name="model_number">Model Number:</string>
    <string name="serial_number">Serial Number:</string>
    <string name="hardware_revision">Hardware Revision:</string>
    <string name="firmware_revision">Firmware Revision:</string>

    <string name="led">LED</string>
    <string name="buzzer">Buzzer</string>
    <string name="rgbled">RGB LED</string>
    <string name="fan">Fan</string>

    <string name="on">On</string>
    <string name="sos">SoS</string>

    <string name="basic">Basic</string>
    <string name="fanfare">Fanfare</string>
    <string name="siren">Siren</string>

    <string name="slow">Slow</string>
    <string name="medium">Medium</string>
    <string name="fast">Fast</string>

    <string name="off">Off</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="magenta">Magenta</string>
    <string name="yellow">Yellow</string>
    <string name="cyan">Cyan</string>
    <string name="white">White</string>
    <string name="party">Party Mode</string>



    <string name="select_service">Select Service</string>


</resources>
